--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,7 +32,7 @@ server.ssl.key-alias=selfsigned
 # DATABASE PROPERTIES
 # ----------------------------------------
 
-spring.datasource.url=jdbc:mysql://localhost:3306/server_db
+spring.datasource.url=jdbc:mysql://localhost:3306/app_server_database
 spring.datasource.username=cristi
 spring.datasource.password=parola
 spring.jpa.hibernate.ddl-auto=update
