--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,7 +26,7 @@ server.ssl.key-store=classpath:ApplicationServer.p12
 server.ssl.key-store-password=parola
 server.ssl.key-store-type=PKCS12
 
-#server.ssl.trust-store=classpath:CordenCA 20200409.p12
+#server.ssl.trust-store=classpath:KurentoMediaServer.p12
 #server.ssl.trust-store-password=parola
 #server.ssl.trust-store-type=PKCS12
 
@@ -43,7 +43,7 @@ server.ssl.key-store-type=PKCS12
 # DATABASE PROPERTIES
 # ----------------------------------------
 
-spring.datasource.url=jdbc:mysql://localhost:3306/app_server_database
+spring.datasource.url=jdbc:mysql://localhost:3306/app_server_database?useSSL=false
 spring.datasource.username=cristi
 spring.datasource.password=parola
 spring.jpa.hibernate.ddl-auto=update
