--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -43,7 +43,18 @@ server.ssl.key-store-type=PKCS12
 # DATABASE PROPERTIES
 # ----------------------------------------
 
-spring.datasource.url=jdbc:mysql://localhost:3306/app_server_database?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/app_server_database?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=cristi
 spring.datasource.password=parola
+# Hibernate ddl auto (create, create-drop, update)
 spring.jpa.hibernate.ddl-auto=update
+
+# Naming strategy
+spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
+
+# Use spring.jpa.properties.* for Hibernate native properties (the prefix is
+# stripped before adding them to the entity manager)
+
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+
