Added two-way SSL authentication.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,13 +22,17 @@ spring.output.ansi.enabled=DETECT
 
 # EMBEDDED SERVER CONFIGURATION
 server.port=8443
+server.ssl.enabled=true
 server.ssl.key-store=classpath:ApplicationServer.p12
 server.ssl.key-store-password=parola
 server.ssl.key-store-type=PKCS12
 
-#server.ssl.trust-store=classpath:KurentoMediaServer.p12
-#server.ssl.trust-store-password=parola
-#server.ssl.trust-store-type=PKCS12
+server.ssl.client-auth=NEED
+
+server.ssl.trust-store=classpath:truststore.jks
+server.ssl.trust-store-password=parola
+server.ssl.trust-store-type=JKS
+server.ssl.trust-store-alias=truststore2
 
 #server.ssl.key-store=classpath:keystore.jks
 #server.ssl.enabled=true
